@@ -4,8 +4,10 @@ import gnu.bytecode.Type;
 import gnu.bytecode.ClassType;
 import gnu.bytecode.ArrayType;
 import gnu.mapping.*;
+import gnu.math.IntNum;
 import gnu.expr.*;
 import java.util.Hashtable;
+import java.util.Vector;
 import gnu.text.SourceMessages;
 import gnu.kawa.lispexpr.*;
 import gnu.lists.AbstractFormat;
@@ -13,8 +15,10 @@ import gnu.kawa.functions.ApplyToArgs;
 import gnu.kawa.functions.DisplayFormat;
 import gnu.kawa.functions.NumberCompare;
 import gnu.kawa.functions.GetNamedPart;
+import gnu.kawa.functions.MultiplyOp;
 import gnu.kawa.reflect.ClassMethods;
 import gnu.kawa.reflect.StaticFieldLocation;
+import gnu.math.DFloNum;
 import gnu.kawa.xml.XmlNamespace;
 import gnu.math.Unit;
 
@@ -743,6 +747,7 @@ public class Scheme extends LispLanguage
       defAliasStFld("*print-miser-width*",
                     "gnu.text.PrettyWriter", "miserWidthLoc");
       defAliasStFld("html", "gnu.kawa.xml.XmlNamespace", "HTML");
+      defAliasStFld("unit", "kawa.standard.Scheme", "unitNamespace");
 
       defAliasStFld("path", "gnu.kawa.lispexpr.LangObjType", "pathType");
       defAliasStFld("filepath", "gnu.kawa.lispexpr.LangObjType", "filepathType");
@@ -781,32 +786,6 @@ public class Scheme extends LispLanguage
   public String getName()
   {
     return "Scheme";
-  }
-
-  public NamedLocation lookupBuiltin (Symbol name, Object property, int hash)
-  {
-    NamedLocation loc = super.lookupBuiltin(name, property, hash);
-    if (loc == null && property == null)
-      {
-        // Special handling for names of the form "<TYPE>".  I.e. if an
-        // identifier of the form is unbound, then get a matching Type.
-        // Also, handles U$unit by doing Unit.lookup("U").  (The Scheme reader
-        // translates a quantity like 2in to (* 2 in$unit).  The advantage is
-        // is that we can have clean scoping rules for unit names;  the downside
-        // is that 2in is no longer a literal.)
-        String nam = name.getName();
-	Object val = null;
-	String uri = name.getNamespaceURI();
-        int len = nam.length();
-	if (nam.endsWith("$unit"))
-	  val = Unit.lookup(nam.substring(0, nam.length()-5));
-	if (val != null)
-          {
-            loc = new PlainLocation(name, null);
-            loc.set(val);
-          }
-      }
-    return loc;
   }
 
   /** Evalutate Scheme expressions from string.
@@ -1045,6 +1024,9 @@ public class Scheme extends LispLanguage
     return getInstance().getTypeFor(exp);
   }
 
+  public static final Namespace unitNamespace =
+    Namespace.make("http://kawa.gnu.org/unit", "unit");
+
   /** If a symbol is lexically unbound, look for a default binding.
    * If the symbol is the name of an existing Java type/class,
    * return that Class.
@@ -1058,8 +1040,16 @@ public class Scheme extends LispLanguage
     String local = symbol.getLocalPart();
     if (namespace instanceof XmlNamespace)
       return QuoteExp.getInstance(((XmlNamespace) namespace).get(local));
+    if (namespace.getName() == unitNamespace.getName())
+      {
+        Object val = Unit.lookup(local);
+        if (val != null)
+          return QuoteExp.getInstance(val);
+      }
     String name = symbol.toString();
     int len = name.length();
+    if (len == 0)
+      return null;
     if (len > 1 && name.charAt(len-1) == '?')
       {
         int llen = local.length();
@@ -1088,7 +1078,152 @@ public class Scheme extends LispLanguage
               }
           }
       }
-    if (len > 2 && name.charAt(0) == '<' && name.charAt(len-1) == '>')
+    char ch0 = name.charAt(0);
+    if (ch0 == '-' || ch0 == '+' || Character.digit(ch0, 10) >= 0)
+      {
+        // 1: initial + or -1 seen.
+        // 2: digits seen
+        // 3: '.' seen
+        // 4: fraction seen
+        // 5: [eE][=+]?[0-9]+ seen
+        int state = 0;
+        int i = 0;
+        for (;  i < len;  i++)
+          {
+            char ch = name.charAt(i);
+            if (Character.digit(ch, 10) >= 0)
+              state = state < 3 ? 2 : state < 5 ? 4 : 5;
+            else if ((ch == '+' || ch == '-') && state == 0)
+              state = 1;
+            else if (ch == '.' && state < 3)
+              state = 3;
+            else if ((ch == 'e' || ch == 'E') && (state == 2 || state == 4)
+                     && i + 1 < len)
+              {
+                int j = i+1;
+                char next = name.charAt(j);
+                if ((next == '-' || next == '+') && ++j < len)
+                  next = name.charAt(j);
+                if (Character.digit(next, 10) < 0)
+                  break;
+                state = 5;
+                i = j+1;
+              }
+            else
+              break;
+          }
+      tryQuantity:
+        if (i < len && state > 1)
+          {
+            DFloNum num = new DFloNum(name.substring(0,i));
+            boolean div = false;
+            Vector vec = new Vector();
+            for (; i < len ;)
+              {
+                char ch = name.charAt(i++);
+                if (ch == '*')
+                  {
+                    if (i == len) break tryQuantity;
+                    ch = name.charAt(i++);
+                  }
+                else if (ch == '/')
+                  {
+                    if (i == len || div) break tryQuantity; 
+                    div = true;
+                    ch = name.charAt(i++);
+                  }
+                int unitStart = i-1;
+                int unitEnd;
+                for (;;)
+                  {
+                    if (! Character.isLetter(ch))
+                      {
+                        unitEnd = i - 1;
+                        break;
+                      }
+                    if (i == len)
+                      {
+                        unitEnd = i;
+                        ch = '1';
+                        break;
+                      }
+                    ch = name.charAt(i++);
+                  }
+                vec.addElement(name.substring(unitStart, unitEnd));
+                boolean expRequired = false;
+                if (ch == '^')
+                  {
+                    expRequired = true;
+                    if (i == len) break tryQuantity; 
+                    ch = name.charAt(i++);
+                  }
+                boolean neg = div;
+                if (ch == '+')
+                  {
+                    expRequired = true;
+                    if (i == len) break tryQuantity; 
+                    ch = name.charAt(i++);
+                  }
+                else if (ch == '-')
+                  {
+                    expRequired = true;
+                    if (i == len) break tryQuantity; 
+                    ch = name.charAt(i++);
+                    neg = ! neg;
+                  }
+                int nexp = 0;
+                int exp = 0;
+                for (;;)
+                  {
+                    int dig = Character.digit(ch, 10);
+                    if (dig <= 0)
+                      {
+                        i--;
+                        break;
+                      }
+                    exp = 10 * exp + dig;
+                    nexp++;
+                    if (i == len)
+                      break;
+                    ch = name.charAt(i++);
+                  }
+                if (nexp == 0)
+                  {
+                    exp = 1;
+                    if (expRequired)
+                      break tryQuantity;
+                  }
+                if (neg)
+                  exp = - exp;
+                vec.addElement(IntNum.make(exp));
+              }
+            if (i == len)
+              {
+                int nunits = vec.size() >> 1;
+                Expression[] units = new Expression[nunits];
+                for (i = 0;  i < nunits;  i++)
+                  {
+                    String uname = (String) vec.elementAt(2*i);
+                    Symbol usym = unitNamespace.getSymbol(uname.intern());
+                    Expression uref = tr.rewrite(usym);
+                    IntNum uexp = (IntNum) vec.elementAt(2*i+1);
+                    if (uexp.longValue() != 1)
+                      uref = new ApplyExp(expt.expt,
+                                          new Expression[] { uref , QuoteExp.getInstance(uexp) });
+                    units[i] = uref;
+                  }
+                Expression unit;
+                if (nunits == 1)
+                  unit = units[0];
+                else
+                  unit = new ApplyExp(MultiplyOp.$St, units);
+                return new ApplyExp(MultiplyOp.$St,
+                                    new Expression[] { QuoteExp.getInstance(num),
+                                                       unit });
+              }
+          }
+      }
+    if (len > 2 && ch0 == '<' && name.charAt(len-1) == '>')
       {
         name = name.substring(1, len-1);
         len -= 2;
