@@ -1,3 +1,12 @@
+2007-03-31  Per Bothner  <per@bothner.com>
+
+	* LispReader.java (parseNumber): Don't try to parse quantities.
+	Because unit names are context-dependent, better to parse quantities
+	at name-resolution-time.
+	(lookupUnit): Remove method.
+	(handleToken): Don't check for potentialNumber, since it doesn't
+	recognize quantities.
+
 2007-03-06  Per Bothner  <per@bothner.com>
 
 	* LispReader.java (readSpecial): Handle #!abstract.
