@@ -1,3 +1,8 @@
+2007-03-31  Per Bothner  <per@bothner.com>
+
+	* Language.java (declFromField): Set IS_NAMESPACE_PREFIX if
+	constant field's type is Namespace.
+
 2007-03-20  Per Bothner  <per@bothner.com>
 
 	* ClassExp.java (declareParts): Checking INTERFACE_SPECIFIED must be
